// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UserToggle should render user toggle 1`] = `
<div>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle data-hj-suppress sentry-mask"
    data-ouia-component-id="OUIA-Generated-MenuToggle-:r3:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    type="button"
  >
    <span
      class="pf-v6-c-menu-toggle__icon"
    >
      <img
        alt="User Avatar"
        class="pf-v6-c-avatar pf-m-sm"
        src="test-file-stub"
      />
    </span>
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      foo foo
    </span>
    <span
      class="pf-v6-c-menu-toggle__controls"
    >
      <span
        class="pf-v6-c-menu-toggle__toggle-icon"
      >
        <svg
          aria-hidden="true"
          class="pf-v6-svg"
          fill="currentColor"
          height="1em"
          role="img"
          viewBox="0 0 20 20"
          width="1em"
        >
          <path
            d="m17.65 8.76-6.674 5.72a1.496 1.496 0 0 1-.976.365c-.347 0-.694-.122-.978-.366l-6.673-5.72A1 1 0 0 1 3 7h14a1 1 0 0 1 .65 1.76Z"
          />
        </svg>
      </span>
    </span>
  </button>
</div>
`;

exports[`UserToggle should render user toggle for small screens 1`] = `
<div>
  <button
    aria-expanded="false"
    class="pf-v6-c-menu-toggle pf-m-plain data-hj-suppress sentry-mask pf-v6-u-pr-lg pf-v6-u-pl-lg"
    data-ouia-component-id="OUIA-Generated-MenuToggle-plain-:r7:"
    data-ouia-component-type="PF6/MenuToggle"
    data-ouia-safe="true"
    id="UserMenu"
    type="button"
    widget-type="UserMenu"
  >
    <span
      class="pf-v6-c-menu-toggle__text"
    >
      <svg
        aria-hidden="true"
        class="pf-v6-svg"
        fill="currentColor"
        height="1em"
        role="img"
        width="1em"
      >
        <svg
          class="pf-v6-icon-default"
          viewBox="0 0 192 512"
        >
          <path
            d="M96 184c39.8 0 72 32.2 72 72s-32.2 72-72 72-72-32.2-72-72 32.2-72 72-72zM24 80c0 39.8 32.2 72 72 72s72-32.2 72-72S135.8 8 96 8 24 40.2 24 80zm0 352c0 39.8 32.2 72 72 72s72-32.2 72-72-32.2-72-72-72-72 32.2-72 72z"
          />
        </svg>
        <svg
          class="pf-v6-icon-rh-ui"
          viewBox="0 0 32 32"
        >
          <path
            d="M16 9c2.206 0 4-1.794 4-4s-1.794-4-4-4-4 1.794-4 4 1.794 4 4 4Zm0-6c1.103 0 2 .897 2 2s-.897 2-2 2-2-.897-2-2 .897-2 2-2Zm0 9c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Zm0 5c-2.206 0-4 1.794-4 4s1.794 4 4 4 4-1.794 4-4-1.794-4-4-4Zm0 6c-1.103 0-2-.897-2-2s.897-2 2-2 2 .897 2 2-.897 2-2 2Z"
          />
        </svg>
      </svg>
    </span>
  </button>
</div>
`;
